# robots_realtime

./: .gitignore  FAR_molmoact  README.md  camera_test.py  old_pip_list.txt  pyproject.toml  pyrightconfig.json  teleop.sh  teleop_trajectory.npy  test.py  wandb_sync_checkpoints.py
configs/: franka_molmoact.yaml  yam_dataset_observation_replay.yaml  yam_molmoact_bimanual.yaml  yam_openpi_bimanual.yaml  yam_replay.yaml  yam_replay_bimanual.yaml  yam_viser_single_arm.yaml
robot_configs/yam/: left.yaml  right.yaml
robots_realtime/agents/: agent.py  replay_agent.py
robots_realtime/agents/policy_learning/: async_pi0_agent.py  molmoact_agent.py
robots_realtime/agents/teleoperation/: yam_pyroki_viser_agent.py
robots_realtime/data/: data_utils.py
robots_realtime/envs/: dataset_observation_env.py  launch.py  recorder.py  robot_env.py
robots_realtime/learning/diffusion_policy/: policy_network.py
robots_realtime/robots/: utils.py
robots_realtime/sensors/cameras/: camera.py  opencv_camera.py  realsense_camera.py
robots_realtime/utils/: keyboard_control.py  launch_utils.py  portal_utils.py
test/: compare_dataset_episode.py  debug_model_input.ipynb  search_image_processing.py
xdof_epi/: action-left-pos.npy  action-right-pos.npy  left-gripper_pos.npy  left-joint_pos.npy  right-gripper_pos.npy  right-joint_pos.npy  states_actions.npy  top_camera-images-rgb_frame_mappings.json
